package net.local.demo.hexagonal.application.ports.incoming;

public interface CheckBalanceUseCase {
    float checkBalance(Long id);
}
